# Pixelator-Windows

./: .gitignore  CMakeLists.txt  FirstLaunchDialog.qml  Main.qml  main.cpp  pixelworker.cpp  pixelworker.h  shortcutmanager.cpp  shortcutmanager.h
.github/workflows/: windows-release.yml
packaging/: AppRun  pixelator.desktop
